<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cod" />

    <EditText
        android:id="@+id/etCod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone" />

    <EditText
        android:id="@+id/etNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"/>


    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnSalvarOnClick"
        android:text="@string/incluir" />

    <Button
        android:id="@+id/btnExcluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnRemoverOnClick"
        android:text="@string/remover" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnBuscarOnClick"
        android:text="@string/buscar" />

</LinearLayout>